# wasm-blas-ts

./: .editorconfig  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FUNCTION_STATUS.md  QUICK_START.md  README.md  daxpy.f  jest.config.js  package.json  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
examples/: basic-usage.ts
src/: dasum.ts  daxpby.ts  daxpy.ts  dcopy.ts  ddot.ts  dgbmv.ts  dgemm.ts  dgemmtr.ts  dgemv.ts  dger.ts  dnrm2.ts  drot.ts  drotg.ts  drotm.ts  drotmg.ts  dsbmv.ts  dscal.ts  dspmv.ts  dspr.ts  dspr2.ts  dswap.ts  dsymm.ts  dsymv.ts  dsyr.ts  dsyr2.ts  dsyr2k.ts  dsyrk.ts  dtbmv.ts  dtbsv.ts  dtpmv.ts  dtpsv.ts  dtrmm.ts  dtrmv.ts  dtrsm.ts  dtrsv.ts  index.ts  types.ts  wasm-module.ts
src/cpp/: blas.h  dasum.cpp  daxpby.cpp  daxpy.cpp  dcopy.cpp  ddot.cpp  dgbmv.cpp  dgemm.cpp  dgemmtr.cpp  dgemv.cpp  dger.cpp  dnrm2.cpp  drot.cpp  drotg.cpp  drotm.cpp  drotmg.cpp  dsbmv.cpp  dscal.cpp  dspmv.cpp  dspr.cpp  dspr2.cpp  dswap.cpp  dsymm.cpp  dsymv.cpp  dsyr.cpp  dsyr2.cpp  dsyr2k.cpp  dsyrk.cpp  dtbmv.cpp  dtbsv.cpp  dtpmv.cpp  dtpsv.cpp  dtrmm.cpp  dtrmv.cpp  dtrsm.cpp  dtrsv.cpp
tests/: dasum.test.ts  daxpby.test.ts  daxpy.test.ts  dcopy.test.ts  ddot.test.ts  dgemm.test.ts  dgemv.test.ts  dnrm2.test.ts  drot.test.ts  drotg.test.ts  dscal.test.ts  dswap.test.ts
types/: blas.d.ts
